New-Assignment/minikube/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: react
        image: my_python_app:0.1
        ports:
        - containerPort: 5000
