New-Assignment/minikube/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python
  name: python-svc
  namespace: default
spec:
  ports:
  - nodePort: 30014
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: python
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
