New-Assignment/minikube/sys-stats-react-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react
  name: react-svc
  namespace: default
spec:
  ports:
  - nodePort: 30018
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: react
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
